# MN

./: CMakeLists.txt  README.md  README.txt  examples.txt  main  main.cpp  naglowek.hpp  source.cpp  tests.cpp
